[gd_scene load_steps=42 format=3 uid="uid://dyjpte5ttfmqt"]

[ext_resource type="Script" path="res://ui/pause_menu.gd" id="1_ucuka"]
[ext_resource type="Texture2D" uid="uid://x833e84vkdqs" path="res://addons/img/Tiny Swords by Pixel Frog/UI/Ribbons/Ribbon_Red_3Slides.png" id="2_4ypr1"]
[ext_resource type="FontFile" uid="uid://btrtsnhxf857a" path="res://font/Taroca Regular.ttf" id="3_0ue2e"]
[ext_resource type="Texture2D" uid="uid://dqjvg5ixx8ath" path="res://addons/img/Tiny Swords by Pixel Frog/UI/Banners/Banner_Vertical.png" id="3_auff2"]
[ext_resource type="Texture2D" uid="uid://cic6uamiduwkn" path="res://addons/img/Tiny Swords by Pixel Frog/UI/Buttons/Restart_Button_Blue_3Slides.png" id="4_7tn5p"]
[ext_resource type="Texture2D" uid="uid://d27dt0uuq66o8" path="res://addons/img/Tiny Swords by Pixel Frog/UI/Buttons/Continue_Button_Blue_3Slides.png" id="4_gmfgr"]
[ext_resource type="Texture2D" uid="uid://dkbxun5yuheq7" path="res://addons/img/Tiny Swords by Pixel Frog/UI/Buttons/Restart_Button_Blue_3Slides_Pressed.png" id="5_t8sjk"]
[ext_resource type="Texture2D" uid="uid://dd7o51d5yb36q" path="res://addons/img/Tiny Swords by Pixel Frog/UI/Buttons/Continue_Button_Blue_3Slides_Pressed.png" id="5_vh54j"]
[ext_resource type="Texture2D" uid="uid://cslfo4bvy7aqb" path="res://addons/img/Tiny Swords by Pixel Frog/UI/Buttons/Continue_Button_Hover_3Slides.png" id="6_hmp4a"]
[ext_resource type="Texture2D" uid="uid://cgc4s8l1to4oe" path="res://addons/img/Tiny Swords by Pixel Frog/UI/Buttons/Restart_Button_Hover_3Slides.png" id="6_k7ub3"]
[ext_resource type="Texture2D" uid="uid://dlax3pcy5ana2" path="res://addons/img/Tiny Swords by Pixel Frog/UI/Buttons/Exit_Button_Blue_3Slides.png" id="7_y6iip"]
[ext_resource type="Texture2D" uid="uid://bov3wfy2bvspl" path="res://addons/img/Tiny Swords by Pixel Frog/UI/Buttons/Exit_Button_Blue_3Slides_Pressed.png" id="8_vtr2v"]
[ext_resource type="Texture2D" uid="uid://hhn3ioggf5hv" path="res://addons/img/Tiny Swords by Pixel Frog/UI/Buttons/Exit_Button_Hover_3Slides.png" id="9_wuu88"]
[ext_resource type="AudioStream" uid="uid://brx51u8gh8dr1" path="res://addons/audio/Inteface SFX by ObsidyanX/confirm_style_2_001.ogg" id="10_rifhe"]
[ext_resource type="Texture2D" uid="uid://b83vqffafwepr" path="res://addons/img/Tiny Swords by Pixel Frog/UI/Buttons/Settings_Button_Blue_3Slides.png" id="11_h73ll"]
[ext_resource type="Texture2D" uid="uid://cyl783icintp" path="res://addons/img/Tiny Swords by Pixel Frog/UI/Buttons/Settings_Button_Blue_3Slides_Pressed.png" id="12_y7y5v"]
[ext_resource type="Texture2D" uid="uid://d3fpog871i7jc" path="res://addons/img/Tiny Swords by Pixel Frog/UI/Buttons/Settings_Button_Hover_3Slides.png" id="13_375vo"]
[ext_resource type="Texture2D" uid="uid://c1nfdyv0bimig" path="res://addons/img/Tiny Swords by Pixel Frog/UI/Banners/Banner_Horizontal.png" id="14_5obv1"]
[ext_resource type="Texture2D" uid="uid://bbv4klajfgndp" path="res://addons/img/Tiny Swords by Pixel Frog/UI/Banners/Carved_3Slides.png" id="15_6pnvy"]
[ext_resource type="Script" path="res://ui/volume_slider.gd" id="16_5hjny"]
[ext_resource type="Texture2D" uid="uid://dfuxvpp1k2oo0" path="res://addons/img/Tiny Swords by Pixel Frog/UI/Buttons/Close_Button_Red.png" id="17_w35r1"]
[ext_resource type="Texture2D" uid="uid://bscndtndgjwde" path="res://addons/img/Tiny Swords by Pixel Frog/UI/Buttons/Close_Button_Red_Pressed.png" id="18_g1p04"]
[ext_resource type="Texture2D" uid="uid://7qf3lanhvuwu" path="res://addons/img/Tiny Swords by Pixel Frog/UI/Buttons/Close_Button_Hover.png" id="19_eo1ex"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ox5ye"]
texture = ExtResource("2_4ypr1")
texture_margin_left = 64.0
texture_margin_top = 16.0
texture_margin_right = 64.0
texture_margin_bottom = 24.0
axis_stretch_horizontal = 2
region_rect = Rect2(0, 0, 192, 64)

[sub_resource type="LabelSettings" id="LabelSettings_qq5fc"]
font = ExtResource("3_0ue2e")
font_size = 50
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hnj46"]
texture = ExtResource("3_auff2")
texture_margin_left = 32.0
texture_margin_top = 40.0
texture_margin_right = 32.0
texture_margin_bottom = 40.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(32, 24, 128, 144)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_c3fpx"]
texture = ExtResource("14_5obv1")
texture_margin_left = 32.0
texture_margin_top = 18.0
texture_margin_right = 32.0
texture_margin_bottom = 42.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(32, 46, 128, 124)

[sub_resource type="LabelSettings" id="LabelSettings_s2qt1"]
font = ExtResource("3_0ue2e")
font_size = 35
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_jh8so"]
font = ExtResource("3_0ue2e")
font_size = 19
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_xebvd"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ejm3w"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_nvaqf"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_84vi7"]
texture = ExtResource("15_6pnvy")
texture_margin_left = 32.0
texture_margin_top = 16.0
texture_margin_right = 32.0
texture_margin_bottom = 16.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
region_rect = Rect2(0, 0, 192, 64)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_o6882"]
texture = ExtResource("15_6pnvy")
texture_margin_left = 32.0
texture_margin_top = 16.0
texture_margin_right = 32.0
texture_margin_bottom = 16.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
region_rect = Rect2(0, 0, 192, 64)
modulate_color = Color(0.619608, 0.529412, 0.462745, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqlkv"]
atlas = ExtResource("17_w35r1")
region = Rect2(7, 0, 50, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_hk8qg"]
atlas = ExtResource("18_g1p04")
region = Rect2(5, 0, 54, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_0w864"]
atlas = ExtResource("19_eo1ex")
region = Rect2(7, 0, 50, 56)

[sub_resource type="Animation" id="Animation_mn2rm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Parchment:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(252, 274)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Parchment:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(514, 204)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Parchment/HBoxContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Ribbon:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(533, 92)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Ribbon:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(309.5, 82)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Ribbon/Label:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Ribbon:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Parchment:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Settings:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(603, 170)]
}

[sub_resource type="Animation" id="Animation_82s0i"]
resource_name = "Settings"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Settings:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(603, 170), Vector2(448, 169.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Settings:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(74, 397), Vector2(384, 397)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Settings/CloseSettingsButton:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.9, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Settings/VBoxContainer:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.9, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Settings:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.2, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Settings:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_tntoj"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Parchment:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(252, 78), Vector2(252, 326)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Parchment:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(514, 302), Vector2(514, 204)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Parchment/HBoxContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.8, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Ribbon:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(136, 92), Vector2(533, 92)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Ribbon:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.3, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(572, 82), Vector2(373.5, 82)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Ribbon/Label:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.8, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Ribbon:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Parchment:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pocpc"]
_data = {
"RESET": SubResource("Animation_mn2rm"),
"Settings": SubResource("Animation_82s0i"),
"default": SubResource("Animation_tntoj")
}

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_ucuka")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.509804)

[node name="Ribbon" type="Panel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -266.5
offset_top = 82.0
offset_right = 266.5
offset_bottom = 174.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ox5ye")
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Ribbon"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.5
offset_top = -31.5
offset_right = 163.5
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
text = "GAME PAUSED"
label_settings = SubResource("LabelSettings_qq5fc")
horizontal_alignment = 1

[node name="Parchment" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 514.0
offset_top = 204.0
offset_right = -514.0
offset_bottom = -190.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_hnj46")

[node name="HBoxContainer" type="VBoxContainer" parent="Parchment"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 37.0
offset_top = 33.5
offset_right = -37.0
offset_bottom = -46.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 13
alignment = 1

[node name="ContinueButton" type="TextureButton" parent="Parchment/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_gmfgr")
texture_pressed = ExtResource("5_vh54j")
texture_hover = ExtResource("6_hmp4a")
stretch_mode = 0

[node name="RestartButton" type="TextureButton" parent="Parchment/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_7tn5p")
texture_pressed = ExtResource("5_t8sjk")
texture_hover = ExtResource("6_k7ub3")
stretch_mode = 0

[node name="SettingsButton" type="TextureButton" parent="Parchment/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("11_h73ll")
texture_pressed = ExtResource("12_y7y5v")
texture_hover = ExtResource("13_375vo")
stretch_mode = 0

[node name="ExitButton" type="TextureButton" parent="Parchment/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("7_y6iip")
texture_pressed = ExtResource("8_vtr2v")
texture_hover = ExtResource("9_wuu88")
stretch_mode = 0

[node name="Settings" type="Panel" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -190.0
offset_right = 37.0
offset_bottom = 207.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_c3fpx")
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Settings"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 46.0
offset_top = 29.0
offset_right = -46.0
offset_bottom = -108.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 22

[node name="Label2" type="Label" parent="Settings/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "SETTINGS
"
label_settings = SubResource("LabelSettings_s2qt1")
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="Settings/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Settings/VBoxContainer/HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -10.0
offset_right = 128.0
offset_bottom = 10.0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "VOLUME"
label_settings = SubResource("LabelSettings_jh8so")
vertical_alignment = 1
text_overrun_behavior = 1

[node name="VolumeSlider" type="HSlider" parent="Settings/VBoxContainer/HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -164.0
offset_top = -28.0
offset_bottom = 28.0
grow_horizontal = 0
grow_vertical = 2
focus_mode = 0
theme_override_icons/grabber = SubResource("CompressedTexture2D_xebvd")
theme_override_icons/grabber_highlight = SubResource("CompressedTexture2D_ejm3w")
theme_override_icons/grabber_disabled = SubResource("CompressedTexture2D_nvaqf")
theme_override_styles/slider = SubResource("StyleBoxTexture_84vi7")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_o6882")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxTexture_o6882")
max_value = 1.0
step = 0.1
script = ExtResource("16_5hjny")
bus_name = "Master"

[node name="HBoxContainer2" type="HBoxContainer" parent="Settings/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="Settings/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Settings/VBoxContainer/HBoxContainer2/Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -10.0
offset_right = 128.0
offset_bottom = 10.0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "SFX
"
label_settings = SubResource("LabelSettings_jh8so")
vertical_alignment = 1
text_overrun_behavior = 1

[node name="VolumeSlider2" type="HSlider" parent="Settings/VBoxContainer/HBoxContainer2/Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -164.0
offset_top = -28.0
offset_bottom = 28.0
grow_horizontal = 0
grow_vertical = 2
focus_mode = 0
theme_override_icons/grabber = SubResource("CompressedTexture2D_xebvd")
theme_override_icons/grabber_highlight = SubResource("CompressedTexture2D_ejm3w")
theme_override_icons/grabber_disabled = SubResource("CompressedTexture2D_nvaqf")
theme_override_styles/slider = SubResource("StyleBoxTexture_84vi7")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_o6882")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxTexture_o6882")
max_value = 1.0
step = 0.1
script = ExtResource("16_5hjny")
bus_name = "SFX"

[node name="HBoxContainer3" type="HBoxContainer" parent="Settings/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="Settings/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Settings/VBoxContainer/HBoxContainer3/Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -10.0
offset_right = 128.0
offset_bottom = 10.0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "MUSIC"
label_settings = SubResource("LabelSettings_jh8so")
vertical_alignment = 1
text_overrun_behavior = 1

[node name="VolumeSlider3" type="HSlider" parent="Settings/VBoxContainer/HBoxContainer3/Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -164.0
offset_top = -28.0
offset_bottom = 28.0
grow_horizontal = 0
grow_vertical = 2
focus_mode = 0
theme_override_icons/grabber = SubResource("CompressedTexture2D_xebvd")
theme_override_icons/grabber_highlight = SubResource("CompressedTexture2D_ejm3w")
theme_override_icons/grabber_disabled = SubResource("CompressedTexture2D_nvaqf")
theme_override_styles/slider = SubResource("StyleBoxTexture_84vi7")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_o6882")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxTexture_o6882")
max_value = 1.0
step = 0.1
script = ExtResource("16_5hjny")
bus_name = "Music"

[node name="HBoxContainer4" type="HBoxContainer" parent="Settings/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="Settings/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Settings/VBoxContainer/HBoxContainer4/Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -10.0
offset_right = 128.0
offset_bottom = 10.0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "AMBIENT
"
label_settings = SubResource("LabelSettings_jh8so")
vertical_alignment = 1
text_overrun_behavior = 1

[node name="VolumeSlider4" type="HSlider" parent="Settings/VBoxContainer/HBoxContainer4/Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -164.0
offset_top = -28.0
offset_bottom = 28.0
grow_horizontal = 0
grow_vertical = 2
focus_mode = 0
theme_override_icons/grabber = SubResource("CompressedTexture2D_xebvd")
theme_override_icons/grabber_highlight = SubResource("CompressedTexture2D_ejm3w")
theme_override_icons/grabber_disabled = SubResource("CompressedTexture2D_nvaqf")
theme_override_styles/slider = SubResource("StyleBoxTexture_84vi7")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_o6882")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxTexture_o6882")
max_value = 1.0
step = 0.1
script = ExtResource("16_5hjny")
bus_name = "Ambient"

[node name="CloseSettingsButton" type="TextureButton" parent="Settings"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -18.0
offset_top = -84.0
offset_right = 18.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = SubResource("AtlasTexture_sqlkv")
texture_pressed = SubResource("AtlasTexture_hk8qg")
texture_hover = SubResource("AtlasTexture_0w864")
ignore_texture_size = true
stretch_mode = 4

[node name="ConfirmSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_rifhe")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pocpc")
}
autoplay = "default"

[connection signal="button_up" from="Parchment/HBoxContainer/ContinueButton" to="." method="_on_continue_button_button_up"]
[connection signal="button_up" from="Parchment/HBoxContainer/RestartButton" to="." method="_on_restart_button_button_up"]
[connection signal="button_up" from="Parchment/HBoxContainer/SettingsButton" to="." method="_on_settings_button_button_up"]
[connection signal="button_up" from="Parchment/HBoxContainer/ExitButton" to="." method="_on_exit_button_button_up"]
[connection signal="button_up" from="Settings/CloseSettingsButton" to="." method="_on_close_settings_button_button_up"]
